// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`opt() makes failing match ok 1`] = `
{
  "named": {},
  "value": [
    false,
    "foo",
  ],
}
`;

exports[`seq() handles two element match 1`] = `
{
  "named": {},
  "value": [
    "#import",
    "foo",
  ],
}
`;

exports[`tracing 1`] = `
"..repeat
  ..wordz
    ✓ kind 'word'
  ✓ wordz
  ..wordz
    x kind 'word'
  x wordz
✓ repeat"
`;
